# aacp_for_pi4

./: README.md
aacp-sdk/: .gitignore  CMakeLists.txt  build.gradle.kts  gradle.properties  readme2.md  settings.gradle.kts
aacp-sdk/gradle/: libs.versions.toml
aacp-sdk/scripts/: build_aar.sh  build_so.sh  verify_layers.sh  watch_usb.sh
aacp-sdk/sdk-android/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
aacp-sdk/sdk-android/src/main/: AndroidManifest.xml
aacp-sdk/sdk-android/src/main/cpp/: jni_bridge.cpp
aacp-sdk/sdk-android/src/main/kotlin/com/aacp/sdk/: CarPlayManager.kt
aacp-sdk/sdk-android/src/main/kotlin/com/aacp/sdk/input/: MicCapture.kt  TouchForwarder.kt
aacp-sdk/sdk-android/src/main/kotlin/com/aacp/sdk/media/: AudioPlayer.kt  VideoDecoder.kt
aacp-sdk/sdk-core/: CMakeLists.txt
aacp-sdk/sdk-core/include/aacp/: AacpSdk.h  Callbacks.h  Types.h
aacp-sdk/sdk-core/src/: AacpSdk.cpp
aacp-sdk/sdk-core/src/protocol/: AacpProtocol.cpp  AacpProtocol.h
aacp-sdk/sdk-core/src/session/: SessionManager.cpp  SessionManager.h
aacp-sdk/sdk-core/src/transport/: UsbTransport.cpp  UsbTransport.h
aacp-sdk/sdk-core/tests/: CMakeLists.txt  protocol_test.cpp
aacp-sdk/sdk-test/: build.gradle.kts
aacp-sdk/sdk-test/src/main/: AndroidManifest.xml
aacp-sdk/sdk-test/src/main/kotlin/com/aacp/demo/: CarPlayActivity.kt
aacp-sdk/sdk-test/src/main/res/layout/: activity_carplay.xml
aacp-sdk/sdk-test/src/main/res/xml/: device_filter.xml
